along with this program; if not, write to the Free Software
Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307, USA.

============================================================

PyKota NEWS :

    - 1.19alpha23 :
    
        - Fixed waitprinter.sh wrt PowerSave mode and some
          printers. Thanks to Ryan Suarez.
        
        - Smart PDL analyzer now recognizes PDF too.
        
        - All tracebacks now include PyKota's version number.
          
    - 1.19alpha22 :
    
        - Ensures that the file pointer for job's data is 
          reset to the start of the job's datas after the
          job's size pre-computation phase.
          
        - Improved PostScript detection code for bad drivers
          which don't correctly switch languages between PJL
          and PS.
       
        - Even better debugging code.
        
    - 1.19alpha21 :
    
        - Additionnal check.
        
    - 1.19alpha20 :
    
        - More complete logging messages wrt accounters.
        
        - Now catches early failures occuring when the configuration
          files are parsed.
        
    - 1.19alpha19 :
    
        - Fixed over-verbose exits when displaying help
          or version.
          
        - Extended some PATH in the shell scripts  
        
        - Deleting an user now also deletes his payments history.
        
        - Doesn't explicitely ignore SIGCHLD anymore. This seems to
          cause problems.

    - 1.19alpha18 :
    
        - History of payments is now stored in the database, and
          updated each time an user's balance is modified with
          edpykota --balance. This history represents each time
          the user was given some positive or negative credit,
          but doesn't reflect price paid for jobs, which appear
          in the jobs history instead.
          
        - Jobs history web reports now include the job's size in